modification du cmake pour générer des librairies partagees

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,35 @@
 cmake_minimum_required(VERSION 2.6)
 
 PROJECT(TetraBot)
+
 SET(TetraBot_VERSION 0.0.1)
 
+SET(LIBRARY_OUTPUT_PATH bin)
+
 SET(EXECUTABLE_OUTPUT_PATH bin)
+
+#FIND_PACKAGE(OGRE REQUIRED)
+
+#FIND_PACKAGE(CEGUI REQUIRED)
+
+#FIND_PACKAGE(OIS REQUIRED)
+
+#FIND_PACKAGE(bullet REQUIRED)
+
+#FIND_PACKAGE(GL REQUIRED)
+
+#FIND_PACKAGE(glut REQUIRED)
 
 INCLUDE_DIRECTORIES(
 	include
 	ConvexDecomposition
-	OpenGL
+	BulletGL
 	/usr/local/include
 	/usr/local/include/OGRE
 	/usr/local/include/CEGUI
 	/usr/local/lib
 )
+
 LINK_DIRECTORIES(
 	/usr/local/include
 	/usr/local/include/OGRE
@@ -49,8 +65,8 @@ FILE(
 
 FILE(
 	GLOB_RECURSE
-	OpenGL_files
-	./OpenGL/*
+	BulletGL_files
+	./BulletGL/*
 )
 
 FILE(
@@ -59,14 +75,35 @@ FILE(
 	./ConvexDecomposition/*
 )
 
+ADD_LIBRARY(
+	BulletGL
+	SHARED
+
+	${BulletGL_files}
+)
+
+ADD_LIBRARY(
+	ConvexDecomposition
+	SHARED
+
+	${ConvexDecomposition_files}
+)
+
 ADD_EXECUTABLE(
 	tetrabot
 
 	${include_files}
 	${source_files}
 
-	${OpenGL_files}
-	${ConvexDecomposition_files}
+	BulletGL
+	ConvexDecomposition
+)
+
+TARGET_LINK_LIBRARIES(
+	BulletGL
+
+	GL
+	glut
 )
 
 TARGET_LINK_LIBRARIES(
@@ -81,7 +118,7 @@ TARGET_LINK_LIBRARIES(
 	CEGUIBase
 	CEGUIOgreRenderer
 
-	GL
-	glut
+	BulletGL
+	ConvexDecomposition
 )
 
