--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -8,6 +8,10 @@ SET(LIBRARY_OUTPUT_PATH bin)
 
 SET(EXECUTABLE_OUTPUT_PATH bin)
 
+SET(CMAKE_VERBOSE_MAKEFILE 0)
+
+SET(CMAKE_COLOR_MAKEFILE ON)
+
 #FIND_PACKAGE(OGRE REQUIRED)
 
 #FIND_PACKAGE(CEGUI REQUIRED)
