--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -12,11 +12,21 @@ SET(CMAKE_VERBOSE_MAKEFILE OFF)
 
 SET(CMAKE_COLOR_MAKEFILE ON)
 
-#SET(CMAKE_SYSTEM_NAME Linux)
+FIND_PACKAGE(PkgConfig REQUIRED)
 
-#IF(WIN32 AND NOT UNIX)
+#SET(CMAKE_C_COMPILER i586-mingw32msvc-gcc)
+#SET(CMAKE_CXX_COMPILER i586-mingw32msvc-g++)
 
-#ELSE
+#SET(CMAKE_LD_COMPILER i586-mingw32msvc-ld)
+#SET(CMAKE_AR_COMPILER i586-mingw32msvc-ar)
+#SET(CMAKE_AR_COMPILER i586-mingw32msvc-ar)
+#SET(CMAKE_AS_COMPILER i586-mingw32msvc-as)
+#SET(CMAKE_NM_COMPILER i586-mingw32msvc-nm)
+#SET(CMAKE_STRIP_COMPILER i586-mingw32msvc-strip)
+#SET(CMAKE_RANLIB_COMPILER i586-mingw32msvc-ranlib)
+#SET(CMAKE_DLLTOOL_COMPILER i586-mingw32msvc-dlltool)
+#SET(CMAKE_OBJDUMP_COMPILER i586-mingw32msvc-objdump)
+#SET(CMAKE_RC_COMPILER i586-mingw32msvc-rc)
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pipe -fomit-frame-pointer -msse -msse2 -msse3 -mmmx -m3dnow")
 
