--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -28,6 +28,8 @@ FIND_PACKAGE(PkgConfig REQUIRED)
 #SET(CMAKE_OBJDUMP_COMPILER i586-mingw32msvc-objdump)
 #SET(CMAKE_RC_COMPILER i586-mingw32msvc-rc)
 
+SET(CMAKE_LINK_LIBRARY_FLAG "${CMAKE_LINK_LIBRARY_FLAG} -fPIC ")
+
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pipe -fomit-frame-pointer -msse -msse2 -msse3 -mmmx -m3dnow")
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -pipe -fomit-frame-pointer -msse -msse2 -msse3 -mmmx -m3dnow")
